--- a/index.html
+++ b/index.html
@@ -2,11 +2,15 @@
 <html>
   <head>
     <title>My Portfolio</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="style.css">
   </head>
   <body>
     <header>
       <nav>
+        <div class="logo"><a href="#">My Portfolio</a></div>
+        <input type="checkbox" id="menu-toggle">
+        <label for="menu-toggle" class="menu-icon"><span></span></label>
         <ul>
           <li><a href="#about">About</a></li>
           <li><a href="#portfolio">Portfolio</a></li>
@@ -31,13 +35,13 @@
         <h1>Contact</h1>
         <form>
           <label for="name">Name:</label>
-          <input type="text" id="name" name="name"><br>
+          <input type="text" id="name" name="name">
 
           <label for="email">Email:</label>
-          <input type="email" id="email" name="email"><br>
+          <input type="email" id="email" name="email">
 
           <label for="message">Message:</label>
-          <textarea id="message" name="message"></textarea><br>
+          <textarea id="message" name="message"></textarea>
 
           <button type="submit">Send</button>
         </form>
