--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
    			<a class="menu-toggle" href="#"><span>Menu</span></a>
 
 	   		<div class="logo">
-		         <a href="index.html">KARDS</a>
+		         <a href="index.html">ELMEKKI</a>
 		      </div>		      
 
 		   	<nav id="main-nav-wrap">
@@ -242,7 +242,7 @@
 	   				<div class="timeline-content">
 	   					<h4> UM6P | Benguerir, MAROC </h4>
 	   					<p>Development of an e- reputation platform based on social media using Deep Learning</p>
-						<p style="color:red">Technical environment: Angular, FastApi, MongoDB compass, Python, ML Algorithms, Scikit-Learn.</p>
+						<p style="color:pink">Technical environment: Angular, FastApi, MongoDB compass, Python, ML Algorithms, Scikit-Learn.</p>
 	   				</div>
 
 	   			</div> <!-- /timeline-block -->
